// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCurrencyFormat de_EUR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`createCurrencyFormat en_USD 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "prefix": "$",
  "suffix": "",
}
`;

exports[`createCurrencyFormat en-GB_GBP 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "prefix": "£",
  "suffix": "",
}
`;

exports[`createCurrencyFormat en-IN_INR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "prefix": "₹",
  "suffix": "",
}
`;

exports[`createCurrencyFormat es_EUR 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`createCurrencyFormat ja_JPY 1`] = `
Object {
  "decimalLength": 0,
  "decimalSymbol": null,
  "groupingSymbol": ",",
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`createCurrencyFormat pt_BRL 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ",",
  "groupingSymbol": ".",
  "prefix": "R$",
  "suffix": "",
}
`;

exports[`createCurrencyFormat zh_CNY 1`] = `
Object {
  "decimalLength": 2,
  "decimalSymbol": ".",
  "groupingSymbol": ",",
  "prefix": "￥",
  "suffix": "",
}
`;
